# nsys-parquet-perfetto-skill

./: .gitignore  README.md  README_CN.md  SKILL.md
agents/: openai.yaml
references/: output-schema.md
scripts/: convert_nsys.sh
scripts/nsys2perfetto-datafusion/: Cargo.toml
scripts/nsys2perfetto-datafusion/src/: main.rs
