[package]
name = "nsys2perfetto-datafusion"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "Convert Nsight Systems Parquet exports to Perfetto JSON and aligned Parquet with DataFusion"
license = "Apache-2.0"
repository = "https://github.com/Ma1oneZhang/nsys-parquet-perfetto-skill"
homepage = "https://github.com/Ma1oneZhang/nsys-parquet-perfetto-skill"
keywords = ["nsight", "perfetto", "cuda", "parquet", "datafusion"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
datafusion = { version = "54.0.0", default-features = false, features = ["parquet", "sql", "nested_expressions", "compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = false
